1TBS Formatting applied to all code  - this will be used as the standard.